revenuecat-2022-12-1/v3.0/Dashboard/customers.md
---
title: "Customer View"
slug: "customers"
excerpt: "View and manage customers"
hidden: false
metadata: 
  title: "Customer View | RevenueCat"
  description: "The RevenueCat dashboard lets you view basic customer information, including a timeline of their purchases, and allows you to grant promotional subscriptions. This can be a great way to debug issues and help with customer support."
  image: 
    0: "https://files.readme.io/a9aca51-Reddit__E.jpg"
    1: "Reddit – E.jpg"
    2: 1200
    3: 630
    4: "#fbabaf"
createdAt: {}
updatedAt: "2020-08-08T00:13:12.148Z"
---
The RevenueCat dashboard lets you view basic customer information, including a timeline of their purchases, and allows you to grant promotional subscriptions. This can be a great way to debug issues and help with customer support.

To view a specific customer's information, you'll need to know their [App User Id](doc:user-ids), or find them on the [activity page](https://app.revenuecat.com/activity/).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/e2d55e2-2020-07-30_12.35.54_app-sandbox.revenuecat.com_9d87a6a360eb.png",
        "2020-07-30 12.35.54 app-sandbox.revenuecat.com 9d87a6a360eb.png",
        1094,
        1717,
        "#f7f8f8"
      ]
    }
  ]
}
[/block]
For detailed information on the components of the Customer View, refer to the following guides:

  * [Customer Details :fa-arrow-right:](doc:basic-information)
  * [Customer History :fa-arrow-right:](doc:customer-history)
  * [Active Subscriptions :fa-arrow-right:](doc:active-subscriptions)
  * [Offering Override :fa-arrow-right:](doc:offering-override)
  * [Promotionals :fa-arrow-right:](doc:promotionals)
  * [Attributes :fa-arrow-right:](doc:attributes)
  * [Attribution :fa-arrow-right:](doc:attribution-card)
  * [App User IDs :fa-arrow-right:](doc:aliases-card)
  * [Deleting Users :fa-arrow-right:](doc:manage-users)