revenuecat-2022-12-1/v3.3/Dashboard/customers.md
---
title: "Customer View"
slug: "customers"
excerpt: "View and manage customers"
hidden: false
metadata: 
  title: "Customer View – RevenueCat"
  description: "The RevenueCat dashboard lets you view basic customer information, including a timeline of their purchases, and allows you to grant promotional subscriptions. This can be a great way to debug issues and help with customer support."
  image: 
    0: "https://files.readme.io/b1558b1-60993e3c40039b67596bcc8c_slack-preview.png"
    1: "60993e3c40039b67596bcc8c_slack-preview.png"
    2: 1200
    3: 627
    4: "#f45476"
createdAt: {}
updatedAt: "2021-07-23T20:51:15.072Z"
---
The RevenueCat dashboard lets you view basic customer information, including a timeline of their purchases, and allows you to grant promotional subscriptions. This can be a great way to debug issues and help with customer support.

To view a specific customer's information, you'll need to know their [App User ID](doc:user-ids), or find them on the [activity page](https://app.revenuecat.com/activity/).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/db496c5-2021-07-23_16.45.15_app.revenuecat.com_6432444e2948.png",
        "2021-07-23 16.45.15 app.revenuecat.com 6432444e2948.png",
        1007,
        1678,
        "#f7f8f8"
      ]
    }
  ]
}
[/block]
For detailed information on the components of the Customer View, refer to the following guides:

  * [Customer Details :fa-arrow-right:](doc:basic-information)
  * [Customer History :fa-arrow-right:](doc:customer-history)
  * [Active Subscriptions :fa-arrow-right:](doc:active-subscriptions)
  * [Offering Override :fa-arrow-right:](doc:offering-override)
  * [Promotionals :fa-arrow-right:](doc:promotionals)
  * [Attributes :fa-arrow-right:](doc:attributes)
  * [Attribution :fa-arrow-right:](doc:attribution-card)
  * [App User IDs :fa-arrow-right:](doc:aliases-card)
  * [Deleting Users :fa-arrow-right:](doc:manage-users)
[block:callout]
{
  "type": "info",
  "title": "Dates and times representation",
  "body": "All dates and times in the dashboard are represented in UTC, unless explicitly specified."
}
[/block]